--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <h1>Etch A Sketch</h1>
-        <div class="container"></div>
+        <div class="container">
+            
+        </div>
     </body>
 </html>
