--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>Etch A Sketch</h1>
+        <button class="change">Change grid</button>
         <div class="container">
             
         </div>
